Phase3/Code/syntax.output
State 7 conflicts: 1 shift/reduce
State 26 conflicts: 3 shift/reduce
State 43 conflicts: 3 shift/reduce
State 45 conflicts: 11 shift/reduce
State 68 conflicts: 1 shift/reduce
State 76 conflicts: 1 shift/reduce
State 77 conflicts: 11 shift/reduce
State 97 conflicts: 1 shift/reduce
State 129 conflicts: 8 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier ExtDecList
    8       | Specifier
    9       | Specifier error SEMI
   10       | error FunDec CompSt

   11 ExtDecList: VarDec
   12           | VarDec COMMA ExtDecList

   13 Specifier: TYPE
   14          | StructSpecifier

   15 StructSpecifier: STRUCT OptTag LC DefList RC
   16                | STRUCT Tag
   17                | STRUCT error RC
   18                | error OptTag LC DefList RC

   19 OptTag: ID
   20       | %empty

   21 Tag: ID

   22 VarDec: ID
   23       | VarDec LB INT RB
   24       | VarDec LB error RB

   25 FunDec: ID LP VarList RP
   26       | ID LP RP
   27       | ID LP error RP

   28 VarList: ParamDec COMMA VarList
   29        | ParamDec

   30 ParamDec: Specifier VarDec

   31 CompSt: LC DefList StmtList RC
   32       | LC error RC
   33       | LC DefList StmtList

   34 StmtList: Stmt StmtList
   35         | %empty

   36 Stmt: Exp SEMI
   37     | CompSt
   38     | RETURN Exp SEMI
   39     | IF LP Exp RP Stmt
   40     | IF LP Exp RP Stmt ELSE Stmt
   41     | IF error ELSE Stmt
   42     | WHILE LP Exp RP Stmt
   43     | WHILE error RP Stmt
   44     | WHILE error RP
   45     | RETURN error SEMI
   46     | RETURN Exp
   47     | error SEMI
   48     | Exp error

   49 DefList: Def DefList
   50        | %empty

   51 Def: Specifier DecList SEMI
   52    | Specifier error SEMI
   53    | error DecList SEMI
   54    | Specifier DecList

   55 DecList: Dec
   56        | Dec COMMA DecList

   57 Dec: VarDec
   58    | VarDec ASSIGNOP Exp

   59 Exp: Exp ASSIGNOP Exp
   60    | Exp AND Exp
   61    | Exp OR Exp
   62    | Exp RELOP Exp
   63    | Exp PLUS Exp
   64    | Exp MINUS Exp
   65    | Exp STAR Exp
   66    | Exp DIV Exp
   67    | LP Exp RP
   68    | MINUS Exp
   69    | NOT Exp
   70    | ID LP Args RP
   71    | ID LP RP
   72    | Exp LB Exp RB
   73    | Exp DOT ID
   74    | ID
   75    | INT
   76    | FLOAT
   77    | Exp ASSIGNOP error SEMI
   78    | Exp AND error SEMI
   79    | Exp OR error SEMI
   80    | Exp RELOP error SEMI
   81    | Exp PLUS error SEMI
   82    | Exp MINUS error SEMI
   83    | Exp STAR error SEMI
   84    | Exp DIV error SEMI
   85    | MINUS error SEMI
   86    | NOT error SEMI
   87    | ID LP error SEMI
   88    | ID LP error RP
   89    | Exp LB error RB

   90 Args: Exp COMMA Args
   91     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 9 10 17 18 24 27 32 41 43 44 45 47 48 52 53 77 78 79 80
    81 82 83 84 85 86 87 88 89
INT (258) 23 75
FLOAT (259) 76
ID (260) 19 21 22 25 26 27 70 71 73 74 87 88
SEMI (261) 4 5 9 36 38 45 47 51 52 53 77 78 79 80 81 82 83 84 85 86
    87
COMMA (262) 12 28 56 90
ASSIGNOP (263) 58 59 77
RELOP (264) 62 80
PLUS (265) 63 81
MINUS (266) 64 68 82 85
STAR (267) 65 83
DIV (268) 66 84
AND (269) 60 78
OR (270) 61 79
DOT (271) 73
NOT (272) 69 86
TYPE (273) 13
LP (274) 25 26 27 39 40 42 67 70 71 87 88
RP (275) 25 26 27 39 40 42 43 44 67 70 71 88
LB (276) 23 24 72 89
RB (277) 23 24 72 89
LC (278) 15 18 31 32 33
RC (279) 15 17 18 31 32
STRUCT (280) 15 16 17
RETURN (281) 38 45 46
IF (282) 39 40 41
ELSE (283) 40 41
WHILE (284) 42 43 44
NEG (285)
LOWER_THAN_ELSE (286)


Nonterminals, with rules where they appear

$accept (32)
    on left: 0
Program (33)
    on left: 1, on right: 0
ExtDefList (34)
    on left: 2 3, on right: 1 2
ExtDef (35)
    on left: 4 5 6 7 8 9 10, on right: 2
ExtDecList (36)
    on left: 11 12, on right: 4 7 12
Specifier (37)
    on left: 13 14, on right: 4 5 6 7 8 9 30 51 52 54
StructSpecifier (38)
    on left: 15 16 17 18, on right: 14
OptTag (39)
    on left: 19 20, on right: 15 18
Tag (40)
    on left: 21, on right: 16
VarDec (41)
    on left: 22 23 24, on right: 11 12 23 24 30 57 58
FunDec (42)
    on left: 25 26 27, on right: 6 10
VarList (43)
    on left: 28 29, on right: 25 28
ParamDec (44)
    on left: 30, on right: 28 29
CompSt (45)
    on left: 31 32 33, on right: 6 10 37
StmtList (46)
    on left: 34 35, on right: 31 33 34
Stmt (47)
    on left: 36 37 38 39 40 41 42 43 44 45 46 47 48, on right: 34 39
    40 41 42 43
DefList (48)
    on left: 49 50, on right: 15 18 31 33 49
Def (49)
    on left: 51 52 53 54, on right: 49
DecList (50)
    on left: 55 56, on right: 51 53 54 56
Dec (51)
    on left: 57 58, on right: 55 56
Exp (52)
    on left: 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76
    77 78 79 80 81 82 83 84 85 86 87 88 89, on right: 36 38 39 40 42
    46 48 58 59 60 61 62 63 64 65 66 67 68 69 72 73 77 78 79 80 81
    82 83 84 89 90 91
Args (53)
    on left: 90 91, on right: 70 90


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

   10 ExtDef: error . FunDec CompSt
   18 StructSpecifier: error . OptTag LC DefList RC

    ID  shift, and go to state 9

    $default  reduce using rule 20 (OptTag)

    OptTag  go to state 10
    FunDec  go to state 11


State 2

   13 Specifier: TYPE .

    $default  reduce using rule 13 (Specifier)


State 3

   15 StructSpecifier: STRUCT . OptTag LC DefList RC
   16                | STRUCT . Tag
   17                | STRUCT . error RC

    error  shift, and go to state 12
    ID     shift, and go to state 13

    LC  reduce using rule 20 (OptTag)

    OptTag  go to state 14
    Tag     go to state 15


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 16


State 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 17
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    7       | Specifier . ExtDecList
    8       | Specifier .
    9       | Specifier . error SEMI

    error  shift, and go to state 18
    ID     shift, and go to state 19
    SEMI   shift, and go to state 20

    $end    reduce using rule 8 (ExtDef)
    error   [reduce using rule 8 (ExtDef)]
    TYPE    reduce using rule 8 (ExtDef)
    STRUCT  reduce using rule 8 (ExtDef)

    ExtDecList  go to state 21
    VarDec      go to state 22
    FunDec      go to state 23


State 8

   14 Specifier: StructSpecifier .

    $default  reduce using rule 14 (Specifier)


State 9

   19 OptTag: ID .
   25 FunDec: ID . LP VarList RP
   26       | ID . LP RP
   27       | ID . LP error RP

    LP  shift, and go to state 24

    $default  reduce using rule 19 (OptTag)


State 10

   18 StructSpecifier: error OptTag . LC DefList RC

    LC  shift, and go to state 25


State 11

   10 ExtDef: error FunDec . CompSt

    LC  shift, and go to state 26

    CompSt  go to state 27


State 12

   17 StructSpecifier: STRUCT error . RC

    RC  shift, and go to state 28


State 13

   19 OptTag: ID .
   21 Tag: ID .

    LC        reduce using rule 19 (OptTag)
    $default  reduce using rule 21 (Tag)


State 14

   15 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 29


State 15

   16 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 16 (StructSpecifier)


State 16

    0 $accept: Program $end .

    $default  accept


State 17

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 18

    9 ExtDef: Specifier error . SEMI

    SEMI  shift, and go to state 30


State 19

   22 VarDec: ID .
   25 FunDec: ID . LP VarList RP
   26       | ID . LP RP
   27       | ID . LP error RP

    LP  shift, and go to state 24

    $default  reduce using rule 22 (VarDec)


State 20

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 21

    4 ExtDef: Specifier ExtDecList . SEMI
    7       | Specifier ExtDecList .

    SEMI  shift, and go to state 31

    $default  reduce using rule 7 (ExtDef)


State 22

   11 ExtDecList: VarDec .
   12           | VarDec . COMMA ExtDecList
   23 VarDec: VarDec . LB INT RB
   24       | VarDec . LB error RB

    COMMA  shift, and go to state 32
    LB     shift, and go to state 33

    $default  reduce using rule 11 (ExtDecList)


State 23

    6 ExtDef: Specifier FunDec . CompSt

    LC  shift, and go to state 26

    CompSt  go to state 34


State 24

   25 FunDec: ID LP . VarList RP
   26       | ID LP . RP
   27       | ID LP . error RP

    error   shift, and go to state 35
    TYPE    shift, and go to state 2
    RP      shift, and go to state 36
    STRUCT  shift, and go to state 3

    Specifier        go to state 37
    StructSpecifier  go to state 8
    VarList          go to state 38
    ParamDec         go to state 39


State 25

   18 StructSpecifier: error OptTag LC . DefList RC

    error   shift, and go to state 40
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    RC  reduce using rule 50 (DefList)

    Specifier        go to state 41
    StructSpecifier  go to state 8
    DefList          go to state 42
    Def              go to state 43


State 26

   31 CompSt: LC . DefList StmtList RC
   32       | LC . error RC
   33       | LC . DefList StmtList

    error   shift, and go to state 44
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end    reduce using rule 50 (DefList)
    error   [reduce using rule 50 (DefList)]
    INT     reduce using rule 50 (DefList)
    FLOAT   reduce using rule 50 (DefList)
    ID      reduce using rule 50 (DefList)
    MINUS   reduce using rule 50 (DefList)
    NOT     reduce using rule 50 (DefList)
    TYPE    [reduce using rule 50 (DefList)]
    LP      reduce using rule 50 (DefList)
    LC      reduce using rule 50 (DefList)
    RC      reduce using rule 50 (DefList)
    STRUCT  [reduce using rule 50 (DefList)]
    RETURN  reduce using rule 50 (DefList)
    IF      reduce using rule 50 (DefList)
    ELSE    reduce using rule 50 (DefList)
    WHILE   reduce using rule 50 (DefList)

    Specifier        go to state 41
    StructSpecifier  go to state 8
    DefList          go to state 45
    Def              go to state 43


State 27

   10 ExtDef: error FunDec CompSt .

    $default  reduce using rule 10 (ExtDef)


State 28

   17 StructSpecifier: STRUCT error RC .

    $default  reduce using rule 17 (StructSpecifier)


State 29

   15 StructSpecifier: STRUCT OptTag LC . DefList RC

    error   shift, and go to state 40
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    RC  reduce using rule 50 (DefList)

    Specifier        go to state 41
    StructSpecifier  go to state 8
    DefList          go to state 46
    Def              go to state 43


State 30

    9 ExtDef: Specifier error SEMI .

    $default  reduce using rule 9 (ExtDef)


State 31

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 32

   12 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 47

    ExtDecList  go to state 48
    VarDec      go to state 22


State 33

   23 VarDec: VarDec LB . INT RB
   24       | VarDec LB . error RB

    error  shift, and go to state 49
    INT    shift, and go to state 50


State 34

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 35

   18 StructSpecifier: error . OptTag LC DefList RC
   27 FunDec: ID LP error . RP

    ID  shift, and go to state 51
    RP  shift, and go to state 52

    $default  reduce using rule 20 (OptTag)

    OptTag  go to state 10


State 36

   26 FunDec: ID LP RP .

    $default  reduce using rule 26 (FunDec)


State 37

   30 ParamDec: Specifier . VarDec

    ID  shift, and go to state 47

    VarDec  go to state 53


State 38

   25 FunDec: ID LP VarList . RP

    RP  shift, and go to state 54


State 39

   28 VarList: ParamDec . COMMA VarList
   29        | ParamDec .

    COMMA  shift, and go to state 55

    $default  reduce using rule 29 (VarList)


State 40

   18 StructSpecifier: error . OptTag LC DefList RC
   53 Def: error . DecList SEMI

    ID  shift, and go to state 56

    $default  reduce using rule 20 (OptTag)

    OptTag   go to state 10
    VarDec   go to state 57
    DecList  go to state 58
    Dec      go to state 59


State 41

   51 Def: Specifier . DecList SEMI
   52    | Specifier . error SEMI
   54    | Specifier . DecList

    error  shift, and go to state 60
    ID     shift, and go to state 47

    VarDec   go to state 57
    DecList  go to state 61
    Dec      go to state 59


State 42

   18 StructSpecifier: error OptTag LC DefList . RC

    RC  shift, and go to state 62


State 43

   49 DefList: Def . DefList

    error   shift, and go to state 40
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end    reduce using rule 50 (DefList)
    error   [reduce using rule 50 (DefList)]
    INT     reduce using rule 50 (DefList)
    FLOAT   reduce using rule 50 (DefList)
    ID      reduce using rule 50 (DefList)
    MINUS   reduce using rule 50 (DefList)
    NOT     reduce using rule 50 (DefList)
    TYPE    [reduce using rule 50 (DefList)]
    LP      reduce using rule 50 (DefList)
    LC      reduce using rule 50 (DefList)
    RC      reduce using rule 50 (DefList)
    STRUCT  [reduce using rule 50 (DefList)]
    RETURN  reduce using rule 50 (DefList)
    IF      reduce using rule 50 (DefList)
    ELSE    reduce using rule 50 (DefList)
    WHILE   reduce using rule 50 (DefList)

    Specifier        go to state 41
    StructSpecifier  go to state 8
    DefList          go to state 63
    Def              go to state 43


State 44
